--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,10 +22,12 @@ body {
 }
 
 .main-content {
-  padding:10px;
+  /* padding:10px; */
   /* background-color: rgb(81, 52, 252); */
   width: 100%;
   height: 100%;
+  padding-top: 15px;
+  padding-bottom: 30px;
 }
 
 .main-content::after {
@@ -48,13 +50,26 @@ body {
   width: 56%;
   /* height: 300px; */
   margin: 0 4%;
+  padding: 10px;
   background-color: rgb(91, 163, 51);
 }
 
 .col-right {
   width: 18%;
   /* height: 200px; */
-  background-color: rgb(209, 123, 26);
+  /* background-color: rgb(209, 123, 26); */
+}
+
+.widjet {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 20px;
+  padding: 10px;
+  background-color: grey;
+}
+
+.widjet:last-child {
+  margin-bottom: 0;
 }
 
 .end-of-page {
